// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`classifyDocument (characterization) > pins results and anomalies for every document — defaults 1`] = `
{
  "21 chars": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.9,
        "context": {
          "filename": undefined,
          "format": "UNKNOWN",
          "textPreview": "123456789012345678901",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.5,
        "entityId": "d17",
        "entityType": "document",
        "expectedValue": 0.5,
        "id": "doc-cls-not_classified-1782864000000-0",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 0%, minimum 50%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "no_keywords_matched",
      "completenessScore": 0,
      "confidence": 0,
      "detectedFormat": "UNKNOWN",
      "detectedType": "unknown",
      "documentId": "d17",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "bank statement": {
    "anomalies": [],
    "result": {
      "classificationMethod": "keyword_match",
      "completenessScore": 1,
      "confidence": 0.8148148148148149,
      "detectedFormat": "UNKNOWN",
      "detectedType": "bank_statement",
      "documentId": "d7",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "contract mismatch declared": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.85,
        "context": {
          "declaredType": "invoice",
          "detectedType": "contract",
          "filename": undefined,
        },
        "detectionMethod": "type_mismatch_check",
        "deviation": 1,
        "entityId": "d9",
        "entityType": "document",
        "expectedValue": 1,
        "id": "doc-cls-type_mismatch-1782864000000-0",
        "metric": "type_match",
        "reasoning": "Declared type "invoice" does not match detected type "contract"",
        "severity": "medium",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "keyword_match",
      "completenessScore": 1,
      "confidence": 1,
      "detectedFormat": "UNKNOWN",
      "detectedType": "contract",
      "documentId": "d9",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "declared but unknown": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.9,
        "context": {
          "filename": undefined,
          "format": "UNKNOWN",
          "textPreview": "lorem ipsum dolor sit amet consectetur adipiscing",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.5,
        "entityId": "d15",
        "entityType": "document",
        "expectedValue": 0.5,
        "id": "doc-cls-not_classified-1782864000000-0",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 0%, minimum 50%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "no_keywords_matched",
      "completenessScore": 0,
      "confidence": 0,
      "detectedFormat": "UNKNOWN",
      "detectedType": "unknown",
      "documentId": "d15",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "declared matches": {
    "anomalies": [],
    "result": {
      "classificationMethod": "keyword_match",
      "completenessScore": 1,
      "confidence": 0.8148148148148149,
      "detectedFormat": "UNKNOWN",
      "detectedType": "receipt",
      "documentId": "d10",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "empty text": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.9,
        "context": {
          "filename": undefined,
          "format": "UNKNOWN",
          "textPreview": "",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.5,
        "entityId": "d12",
        "entityType": "document",
        "expectedValue": 0.5,
        "id": "doc-cls-not_classified-1782864000000-0",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 0%, minimum 50%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "format_only",
      "completenessScore": 0,
      "confidence": 0,
      "detectedFormat": "UNKNOWN",
      "detectedType": "unknown",
      "documentId": "d12",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "identity": {
    "anomalies": [],
    "result": {
      "classificationMethod": "keyword_match",
      "completenessScore": 1,
      "confidence": 0.8627450980392156,
      "detectedFormat": "UNKNOWN",
      "detectedType": "identity",
      "documentId": "d8",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "invoice complete": {
    "anomalies": [],
    "result": {
      "classificationMethod": "keyword_match",
      "completenessScore": 1,
      "confidence": 0.7777777777777778,
      "detectedFormat": "PDF",
      "detectedType": "invoice",
      "documentId": "d4",
      "missingFields": [],
      "sunatType": "FACTURA",
    },
  },
  "invoice incomplete (1 missing)": {
    "anomalies": [],
    "result": {
      "classificationMethod": "keyword_match",
      "completenessScore": 1,
      "confidence": 0.5555555555555556,
      "detectedFormat": "UNKNOWN",
      "detectedType": "invoice",
      "documentId": "d5",
      "missingFields": [],
      "sunatType": "FACTURA",
    },
  },
  "invoice incomplete (3+ missing)": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.75,
        "context": {
          "detectedType": "invoice",
          "filename": undefined,
          "missingFields": [
            "RUC",
            "serie",
            "correlativo",
            "total",
            "igv",
          ],
        },
        "detectionMethod": "completeness_check",
        "deviation": 1,
        "entityId": "d6",
        "entityType": "document",
        "expectedValue": 1,
        "id": "doc-cls-missing_fields-1782864000000-0",
        "metric": "completeness_score",
        "reasoning": "Document classified as invoice but missing fields: RUC, serie, correlativo, total, igv",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "keyword_match",
      "completenessScore": 0,
      "confidence": 0.2777777777777778,
      "detectedFormat": "UNKNOWN",
      "detectedType": "invoice",
      "documentId": "d6",
      "missingFields": [
        "RUC",
        "serie",
        "correlativo",
        "total",
        "igv",
      ],
      "sunatType": "FACTURA",
    },
  },
  "serie only (boleta)": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.9,
        "context": {
          "filename": undefined,
          "format": "UNKNOWN",
          "textPreview": "venta general de productos varios al cliente final hoy",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.5,
        "entityId": "d14",
        "entityType": "document",
        "expectedValue": 0.5,
        "id": "doc-cls-not_classified-1782864000000-0",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 0%, minimum 50%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "no_keywords_matched",
      "completenessScore": 0,
      "confidence": 0,
      "detectedFormat": "UNKNOWN",
      "detectedType": "unknown",
      "documentId": "d14",
      "missingFields": [],
      "sunatType": "BOLETA",
    },
  },
  "threshold-length text (20 chars)": {
    "anomalies": [
      {
        "actualValue": 20,
        "confidence": 0.8,
        "context": {
          "filename": undefined,
          "textLength": 20,
        },
        "detectionMethod": "content_length_check",
        "deviation": 0,
        "entityId": "d16",
        "entityType": "document",
        "expectedValue": 20,
        "id": "doc-cls-unreadable-1782864000000-0",
        "metric": "text_length",
        "reasoning": "Document text has only 20 characters (minimum 20 for reliable classification)",
        "severity": "medium",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
      {
        "actualValue": 0.1,
        "confidence": 0.9,
        "context": {
          "filename": undefined,
          "format": "UNKNOWN",
          "textPreview": "12345678901234567890",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.4,
        "entityId": "d16",
        "entityType": "document",
        "expectedValue": 0.5,
        "id": "doc-cls-not_classified-1782864000000-1",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 10%, minimum 50%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "unreadable",
      "completenessScore": 0,
      "confidence": 0.1,
      "detectedFormat": "UNKNOWN",
      "detectedType": "unknown",
      "documentId": "d16",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "unknown long text": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.9,
        "context": {
          "filename": "x.png",
          "format": "IMAGE",
          "textPreview": "lorem ipsum dolor sit amet consectetur adipiscing elit",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.5,
        "entityId": "d13",
        "entityType": "document",
        "expectedValue": 0.5,
        "id": "doc-cls-not_classified-1782864000000-0",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 0%, minimum 50%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "no_keywords_matched",
      "completenessScore": 0,
      "confidence": 0,
      "detectedFormat": "IMAGE",
      "detectedType": "unknown",
      "documentId": "d13",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "unreadable short text": {
    "anomalies": [
      {
        "actualValue": 3,
        "confidence": 0.8,
        "context": {
          "filename": undefined,
          "textLength": 3,
        },
        "detectionMethod": "content_length_check",
        "deviation": 17,
        "entityId": "d11",
        "entityType": "document",
        "expectedValue": 20,
        "id": "doc-cls-unreadable-1782864000000-0",
        "metric": "text_length",
        "reasoning": "Document text has only 3 characters (minimum 20 for reliable classification)",
        "severity": "medium",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
      {
        "actualValue": 0.1,
        "confidence": 0.9,
        "context": {
          "filename": undefined,
          "format": "UNKNOWN",
          "textPreview": "abc",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.4,
        "entityId": "d11",
        "entityType": "document",
        "expectedValue": 0.5,
        "id": "doc-cls-not_classified-1782864000000-1",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 10%, minimum 50%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "unreadable",
      "completenessScore": 0,
      "confidence": 0.1,
      "detectedFormat": "UNKNOWN",
      "detectedType": "unknown",
      "documentId": "d11",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "xml + UBL without serie": {
    "anomalies": [
      {
        "actualValue": 0.2,
        "confidence": 0.75,
        "context": {
          "detectedType": "sunat_xml",
          "filename": "a.xml",
          "missingFields": [
            "emisor",
            "receptor",
            "tipo",
            "monto",
          ],
        },
        "detectionMethod": "completeness_check",
        "deviation": 0.8,
        "entityId": "d2",
        "entityType": "document",
        "expectedValue": 1,
        "id": "doc-cls-missing_fields-1782864000000-0",
        "metric": "completeness_score",
        "reasoning": "Document classified as sunat_xml but missing fields: emisor, receptor, tipo, monto",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "xml_format_with_ubl",
      "completenessScore": 0.2,
      "confidence": 0.85,
      "detectedFormat": "XML",
      "detectedType": "sunat_xml",
      "documentId": "d2",
      "missingFields": [
        "emisor",
        "receptor",
        "tipo",
        "monto",
      ],
      "sunatType": undefined,
    },
  },
  "xml + serie": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.75,
        "context": {
          "detectedType": "sunat_xml",
          "filename": "a.xml",
          "missingFields": [
            "UBL",
            "emisor",
            "receptor",
            "tipo",
            "monto",
          ],
        },
        "detectionMethod": "completeness_check",
        "deviation": 1,
        "entityId": "d1",
        "entityType": "document",
        "expectedValue": 1,
        "id": "doc-cls-missing_fields-1782864000000-0",
        "metric": "completeness_score",
        "reasoning": "Document classified as sunat_xml but missing fields: UBL, emisor, receptor, tipo, monto",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "xml_format_with_sunat_type",
      "completenessScore": 0,
      "confidence": 0.95,
      "detectedFormat": "XML",
      "detectedType": "sunat_xml",
      "documentId": "d1",
      "missingFields": [
        "UBL",
        "emisor",
        "receptor",
        "tipo",
        "monto",
      ],
      "sunatType": "FACTURA",
    },
  },
  "xml plain": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.9,
        "context": {
          "filename": "a.xml",
          "format": "XML",
          "textPreview": "<root> xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.5,
        "entityId": "d3",
        "entityType": "document",
        "expectedValue": 0.5,
        "id": "doc-cls-not_classified-1782864000000-0",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 0%, minimum 50%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "no_keywords_matched",
      "completenessScore": 0,
      "confidence": 0,
      "detectedFormat": "XML",
      "detectedType": "unknown",
      "documentId": "d3",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
}
`;

exports[`classifyDocument (characterization) > pins results and anomalies for every document — high min confidence 1`] = `
{
  "21 chars": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.9,
        "context": {
          "filename": undefined,
          "format": "UNKNOWN",
          "textPreview": "123456789012345678901",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.99,
        "entityId": "d17",
        "entityType": "document",
        "expectedValue": 0.99,
        "id": "doc-cls-not_classified-1782864000000-0",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 0%, minimum 99%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "no_keywords_matched",
      "completenessScore": 0,
      "confidence": 0,
      "detectedFormat": "UNKNOWN",
      "detectedType": "unknown",
      "documentId": "d17",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "bank statement": {
    "anomalies": [],
    "result": {
      "classificationMethod": "keyword_match",
      "completenessScore": 1,
      "confidence": 0.8148148148148149,
      "detectedFormat": "UNKNOWN",
      "detectedType": "bank_statement",
      "documentId": "d7",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "contract mismatch declared": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.85,
        "context": {
          "declaredType": "invoice",
          "detectedType": "contract",
          "filename": undefined,
        },
        "detectionMethod": "type_mismatch_check",
        "deviation": 1,
        "entityId": "d9",
        "entityType": "document",
        "expectedValue": 1,
        "id": "doc-cls-type_mismatch-1782864000000-0",
        "metric": "type_match",
        "reasoning": "Declared type "invoice" does not match detected type "contract"",
        "severity": "medium",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "keyword_match",
      "completenessScore": 1,
      "confidence": 1,
      "detectedFormat": "UNKNOWN",
      "detectedType": "contract",
      "documentId": "d9",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "declared but unknown": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.9,
        "context": {
          "filename": undefined,
          "format": "UNKNOWN",
          "textPreview": "lorem ipsum dolor sit amet consectetur adipiscing",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.99,
        "entityId": "d15",
        "entityType": "document",
        "expectedValue": 0.99,
        "id": "doc-cls-not_classified-1782864000000-0",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 0%, minimum 99%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "no_keywords_matched",
      "completenessScore": 0,
      "confidence": 0,
      "detectedFormat": "UNKNOWN",
      "detectedType": "unknown",
      "documentId": "d15",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "declared matches": {
    "anomalies": [],
    "result": {
      "classificationMethod": "keyword_match",
      "completenessScore": 1,
      "confidence": 0.8148148148148149,
      "detectedFormat": "UNKNOWN",
      "detectedType": "receipt",
      "documentId": "d10",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "empty text": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.9,
        "context": {
          "filename": undefined,
          "format": "UNKNOWN",
          "textPreview": "",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.99,
        "entityId": "d12",
        "entityType": "document",
        "expectedValue": 0.99,
        "id": "doc-cls-not_classified-1782864000000-0",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 0%, minimum 99%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "format_only",
      "completenessScore": 0,
      "confidence": 0,
      "detectedFormat": "UNKNOWN",
      "detectedType": "unknown",
      "documentId": "d12",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "identity": {
    "anomalies": [],
    "result": {
      "classificationMethod": "keyword_match",
      "completenessScore": 1,
      "confidence": 0.8627450980392156,
      "detectedFormat": "UNKNOWN",
      "detectedType": "identity",
      "documentId": "d8",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "invoice complete": {
    "anomalies": [],
    "result": {
      "classificationMethod": "keyword_match",
      "completenessScore": 1,
      "confidence": 0.7777777777777778,
      "detectedFormat": "PDF",
      "detectedType": "invoice",
      "documentId": "d4",
      "missingFields": [],
      "sunatType": "FACTURA",
    },
  },
  "invoice incomplete (1 missing)": {
    "anomalies": [],
    "result": {
      "classificationMethod": "keyword_match",
      "completenessScore": 1,
      "confidence": 0.5555555555555556,
      "detectedFormat": "UNKNOWN",
      "detectedType": "invoice",
      "documentId": "d5",
      "missingFields": [],
      "sunatType": "FACTURA",
    },
  },
  "invoice incomplete (3+ missing)": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.75,
        "context": {
          "detectedType": "invoice",
          "filename": undefined,
          "missingFields": [
            "RUC",
            "serie",
            "correlativo",
            "total",
            "igv",
          ],
        },
        "detectionMethod": "completeness_check",
        "deviation": 1,
        "entityId": "d6",
        "entityType": "document",
        "expectedValue": 1,
        "id": "doc-cls-missing_fields-1782864000000-0",
        "metric": "completeness_score",
        "reasoning": "Document classified as invoice but missing fields: RUC, serie, correlativo, total, igv",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "keyword_match",
      "completenessScore": 0,
      "confidence": 0.2777777777777778,
      "detectedFormat": "UNKNOWN",
      "detectedType": "invoice",
      "documentId": "d6",
      "missingFields": [
        "RUC",
        "serie",
        "correlativo",
        "total",
        "igv",
      ],
      "sunatType": "FACTURA",
    },
  },
  "serie only (boleta)": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.9,
        "context": {
          "filename": undefined,
          "format": "UNKNOWN",
          "textPreview": "venta general de productos varios al cliente final hoy",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.99,
        "entityId": "d14",
        "entityType": "document",
        "expectedValue": 0.99,
        "id": "doc-cls-not_classified-1782864000000-0",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 0%, minimum 99%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "no_keywords_matched",
      "completenessScore": 0,
      "confidence": 0,
      "detectedFormat": "UNKNOWN",
      "detectedType": "unknown",
      "documentId": "d14",
      "missingFields": [],
      "sunatType": "BOLETA",
    },
  },
  "threshold-length text (20 chars)": {
    "anomalies": [
      {
        "actualValue": 20,
        "confidence": 0.8,
        "context": {
          "filename": undefined,
          "textLength": 20,
        },
        "detectionMethod": "content_length_check",
        "deviation": 0,
        "entityId": "d16",
        "entityType": "document",
        "expectedValue": 20,
        "id": "doc-cls-unreadable-1782864000000-0",
        "metric": "text_length",
        "reasoning": "Document text has only 20 characters (minimum 20 for reliable classification)",
        "severity": "medium",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
      {
        "actualValue": 0.1,
        "confidence": 0.9,
        "context": {
          "filename": undefined,
          "format": "UNKNOWN",
          "textPreview": "12345678901234567890",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.89,
        "entityId": "d16",
        "entityType": "document",
        "expectedValue": 0.99,
        "id": "doc-cls-not_classified-1782864000000-1",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 10%, minimum 99%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "unreadable",
      "completenessScore": 0,
      "confidence": 0.1,
      "detectedFormat": "UNKNOWN",
      "detectedType": "unknown",
      "documentId": "d16",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "unknown long text": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.9,
        "context": {
          "filename": "x.png",
          "format": "IMAGE",
          "textPreview": "lorem ipsum dolor sit amet consectetur adipiscing elit",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.99,
        "entityId": "d13",
        "entityType": "document",
        "expectedValue": 0.99,
        "id": "doc-cls-not_classified-1782864000000-0",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 0%, minimum 99%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "no_keywords_matched",
      "completenessScore": 0,
      "confidence": 0,
      "detectedFormat": "IMAGE",
      "detectedType": "unknown",
      "documentId": "d13",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "unreadable short text": {
    "anomalies": [
      {
        "actualValue": 3,
        "confidence": 0.8,
        "context": {
          "filename": undefined,
          "textLength": 3,
        },
        "detectionMethod": "content_length_check",
        "deviation": 17,
        "entityId": "d11",
        "entityType": "document",
        "expectedValue": 20,
        "id": "doc-cls-unreadable-1782864000000-0",
        "metric": "text_length",
        "reasoning": "Document text has only 3 characters (minimum 20 for reliable classification)",
        "severity": "medium",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
      {
        "actualValue": 0.1,
        "confidence": 0.9,
        "context": {
          "filename": undefined,
          "format": "UNKNOWN",
          "textPreview": "abc",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.89,
        "entityId": "d11",
        "entityType": "document",
        "expectedValue": 0.99,
        "id": "doc-cls-not_classified-1782864000000-1",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 10%, minimum 99%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "unreadable",
      "completenessScore": 0,
      "confidence": 0.1,
      "detectedFormat": "UNKNOWN",
      "detectedType": "unknown",
      "documentId": "d11",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "xml + UBL without serie": {
    "anomalies": [
      {
        "actualValue": 0.2,
        "confidence": 0.75,
        "context": {
          "detectedType": "sunat_xml",
          "filename": "a.xml",
          "missingFields": [
            "emisor",
            "receptor",
            "tipo",
            "monto",
          ],
        },
        "detectionMethod": "completeness_check",
        "deviation": 0.8,
        "entityId": "d2",
        "entityType": "document",
        "expectedValue": 1,
        "id": "doc-cls-missing_fields-1782864000000-0",
        "metric": "completeness_score",
        "reasoning": "Document classified as sunat_xml but missing fields: emisor, receptor, tipo, monto",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "xml_format_with_ubl",
      "completenessScore": 0.2,
      "confidence": 0.85,
      "detectedFormat": "XML",
      "detectedType": "sunat_xml",
      "documentId": "d2",
      "missingFields": [
        "emisor",
        "receptor",
        "tipo",
        "monto",
      ],
      "sunatType": undefined,
    },
  },
  "xml + serie": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.75,
        "context": {
          "detectedType": "sunat_xml",
          "filename": "a.xml",
          "missingFields": [
            "UBL",
            "emisor",
            "receptor",
            "tipo",
            "monto",
          ],
        },
        "detectionMethod": "completeness_check",
        "deviation": 1,
        "entityId": "d1",
        "entityType": "document",
        "expectedValue": 1,
        "id": "doc-cls-missing_fields-1782864000000-0",
        "metric": "completeness_score",
        "reasoning": "Document classified as sunat_xml but missing fields: UBL, emisor, receptor, tipo, monto",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "xml_format_with_sunat_type",
      "completenessScore": 0,
      "confidence": 0.95,
      "detectedFormat": "XML",
      "detectedType": "sunat_xml",
      "documentId": "d1",
      "missingFields": [
        "UBL",
        "emisor",
        "receptor",
        "tipo",
        "monto",
      ],
      "sunatType": "FACTURA",
    },
  },
  "xml plain": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.9,
        "context": {
          "filename": "a.xml",
          "format": "XML",
          "textPreview": "<root> xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.99,
        "entityId": "d3",
        "entityType": "document",
        "expectedValue": 0.99,
        "id": "doc-cls-not_classified-1782864000000-0",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 0%, minimum 99%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "no_keywords_matched",
      "completenessScore": 0,
      "confidence": 0,
      "detectedFormat": "XML",
      "detectedType": "unknown",
      "documentId": "d3",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
}
`;

exports[`classifyDocument (characterization) > pins results and anomalies for every document — no content, no completeness 1`] = `
{
  "21 chars": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.9,
        "context": {
          "filename": undefined,
          "format": "UNKNOWN",
          "textPreview": "123456789012345678901",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.5,
        "entityId": "d17",
        "entityType": "document",
        "expectedValue": 0.5,
        "id": "doc-cls-not_classified-1782864000000-0",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 0%, minimum 50%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "format_only",
      "completenessScore": 0,
      "confidence": 0,
      "detectedFormat": "UNKNOWN",
      "detectedType": "unknown",
      "documentId": "d17",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "bank statement": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.9,
        "context": {
          "filename": undefined,
          "format": "UNKNOWN",
          "textPreview": "ESTADO DE CUENTA BANCO cuenta saldo movimientos del mes",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.5,
        "entityId": "d7",
        "entityType": "document",
        "expectedValue": 0.5,
        "id": "doc-cls-not_classified-1782864000000-0",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 0%, minimum 50%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "format_only",
      "completenessScore": 0,
      "confidence": 0,
      "detectedFormat": "UNKNOWN",
      "detectedType": "unknown",
      "documentId": "d7",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "contract mismatch declared": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.9,
        "context": {
          "filename": undefined,
          "format": "UNKNOWN",
          "textPreview": "CONTRATO CLAUSULA PARTES FIRMA fecha firmado entre las partes",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.5,
        "entityId": "d9",
        "entityType": "document",
        "expectedValue": 0.5,
        "id": "doc-cls-not_classified-1782864000000-0",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 0%, minimum 50%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "format_only",
      "completenessScore": 0,
      "confidence": 0,
      "detectedFormat": "UNKNOWN",
      "detectedType": "unknown",
      "documentId": "d9",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "declared but unknown": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.9,
        "context": {
          "filename": undefined,
          "format": "UNKNOWN",
          "textPreview": "lorem ipsum dolor sit amet consectetur adipiscing",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.5,
        "entityId": "d15",
        "entityType": "document",
        "expectedValue": 0.5,
        "id": "doc-cls-not_classified-1782864000000-0",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 0%, minimum 50%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "format_only",
      "completenessScore": 0,
      "confidence": 0,
      "detectedFormat": "UNKNOWN",
      "detectedType": "unknown",
      "documentId": "d15",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "declared matches": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.9,
        "context": {
          "filename": undefined,
          "format": "UNKNOWN",
          "textPreview": "TICKET VOUCHER total fecha VUELTO CAJA gracias por su compra",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.5,
        "entityId": "d10",
        "entityType": "document",
        "expectedValue": 0.5,
        "id": "doc-cls-not_classified-1782864000000-0",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 0%, minimum 50%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "format_only",
      "completenessScore": 0,
      "confidence": 0,
      "detectedFormat": "UNKNOWN",
      "detectedType": "unknown",
      "documentId": "d10",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "empty text": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.9,
        "context": {
          "filename": undefined,
          "format": "UNKNOWN",
          "textPreview": "",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.5,
        "entityId": "d12",
        "entityType": "document",
        "expectedValue": 0.5,
        "id": "doc-cls-not_classified-1782864000000-0",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 0%, minimum 50%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "format_only",
      "completenessScore": 0,
      "confidence": 0,
      "detectedFormat": "UNKNOWN",
      "detectedType": "unknown",
      "documentId": "d12",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "identity": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.9,
        "context": {
          "filename": undefined,
          "format": "UNKNOWN",
          "textPreview": "DOCUMENTO NACIONAL DE IDENTIDAD DNI nombres apellidos documento",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.5,
        "entityId": "d8",
        "entityType": "document",
        "expectedValue": 0.5,
        "id": "doc-cls-not_classified-1782864000000-0",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 0%, minimum 50%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "format_only",
      "completenessScore": 0,
      "confidence": 0,
      "detectedFormat": "UNKNOWN",
      "detectedType": "unknown",
      "documentId": "d8",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "invoice complete": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.9,
        "context": {
          "filename": "f.pdf",
          "format": "PDF",
          "textPreview": "FACTURA ELECTRÓNICA RUC 20123456789 serie F001 correlativo 1 total 118 igv 18 SUBTOTAL",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.5,
        "entityId": "d4",
        "entityType": "document",
        "expectedValue": 0.5,
        "id": "doc-cls-not_classified-1782864000000-0",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 0%, minimum 50%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "format_only",
      "completenessScore": 0,
      "confidence": 0,
      "detectedFormat": "PDF",
      "detectedType": "unknown",
      "documentId": "d4",
      "missingFields": [],
      "sunatType": "FACTURA",
    },
  },
  "invoice incomplete (1 missing)": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.9,
        "context": {
          "filename": undefined,
          "format": "UNKNOWN",
          "textPreview": "FACTURA RUC IGV TOTAL serie correlativo",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.5,
        "entityId": "d5",
        "entityType": "document",
        "expectedValue": 0.5,
        "id": "doc-cls-not_classified-1782864000000-0",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 0%, minimum 50%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "format_only",
      "completenessScore": 0,
      "confidence": 0,
      "detectedFormat": "UNKNOWN",
      "detectedType": "unknown",
      "documentId": "d5",
      "missingFields": [],
      "sunatType": "FACTURA",
    },
  },
  "invoice incomplete (3+ missing)": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.9,
        "context": {
          "filename": undefined,
          "format": "UNKNOWN",
          "textPreview": "FACTURA ELECTRÓNICA de venta registrada en el sistema",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.5,
        "entityId": "d6",
        "entityType": "document",
        "expectedValue": 0.5,
        "id": "doc-cls-not_classified-1782864000000-0",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 0%, minimum 50%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "format_only",
      "completenessScore": 0,
      "confidence": 0,
      "detectedFormat": "UNKNOWN",
      "detectedType": "unknown",
      "documentId": "d6",
      "missingFields": [],
      "sunatType": "FACTURA",
    },
  },
  "serie only (boleta)": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.9,
        "context": {
          "filename": undefined,
          "format": "UNKNOWN",
          "textPreview": "venta general de productos varios al cliente final hoy",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.5,
        "entityId": "d14",
        "entityType": "document",
        "expectedValue": 0.5,
        "id": "doc-cls-not_classified-1782864000000-0",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 0%, minimum 50%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "format_only",
      "completenessScore": 0,
      "confidence": 0,
      "detectedFormat": "UNKNOWN",
      "detectedType": "unknown",
      "documentId": "d14",
      "missingFields": [],
      "sunatType": "BOLETA",
    },
  },
  "threshold-length text (20 chars)": {
    "anomalies": [
      {
        "actualValue": 20,
        "confidence": 0.8,
        "context": {
          "filename": undefined,
          "textLength": 20,
        },
        "detectionMethod": "content_length_check",
        "deviation": 0,
        "entityId": "d16",
        "entityType": "document",
        "expectedValue": 20,
        "id": "doc-cls-unreadable-1782864000000-0",
        "metric": "text_length",
        "reasoning": "Document text has only 20 characters (minimum 20 for reliable classification)",
        "severity": "medium",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
      {
        "actualValue": 0.1,
        "confidence": 0.9,
        "context": {
          "filename": undefined,
          "format": "UNKNOWN",
          "textPreview": "12345678901234567890",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.4,
        "entityId": "d16",
        "entityType": "document",
        "expectedValue": 0.5,
        "id": "doc-cls-not_classified-1782864000000-1",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 10%, minimum 50%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "unreadable",
      "completenessScore": 0,
      "confidence": 0.1,
      "detectedFormat": "UNKNOWN",
      "detectedType": "unknown",
      "documentId": "d16",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "unknown long text": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.9,
        "context": {
          "filename": "x.png",
          "format": "IMAGE",
          "textPreview": "lorem ipsum dolor sit amet consectetur adipiscing elit",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.5,
        "entityId": "d13",
        "entityType": "document",
        "expectedValue": 0.5,
        "id": "doc-cls-not_classified-1782864000000-0",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 0%, minimum 50%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "format_only",
      "completenessScore": 0,
      "confidence": 0,
      "detectedFormat": "IMAGE",
      "detectedType": "unknown",
      "documentId": "d13",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "unreadable short text": {
    "anomalies": [
      {
        "actualValue": 3,
        "confidence": 0.8,
        "context": {
          "filename": undefined,
          "textLength": 3,
        },
        "detectionMethod": "content_length_check",
        "deviation": 17,
        "entityId": "d11",
        "entityType": "document",
        "expectedValue": 20,
        "id": "doc-cls-unreadable-1782864000000-0",
        "metric": "text_length",
        "reasoning": "Document text has only 3 characters (minimum 20 for reliable classification)",
        "severity": "medium",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
      {
        "actualValue": 0.1,
        "confidence": 0.9,
        "context": {
          "filename": undefined,
          "format": "UNKNOWN",
          "textPreview": "abc",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.4,
        "entityId": "d11",
        "entityType": "document",
        "expectedValue": 0.5,
        "id": "doc-cls-not_classified-1782864000000-1",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 10%, minimum 50%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "unreadable",
      "completenessScore": 0,
      "confidence": 0.1,
      "detectedFormat": "UNKNOWN",
      "detectedType": "unknown",
      "documentId": "d11",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "xml + UBL without serie": {
    "anomalies": [],
    "result": {
      "classificationMethod": "xml_format_with_ubl",
      "completenessScore": 0,
      "confidence": 0.85,
      "detectedFormat": "XML",
      "detectedType": "sunat_xml",
      "documentId": "d2",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "xml + serie": {
    "anomalies": [],
    "result": {
      "classificationMethod": "xml_format_with_sunat_type",
      "completenessScore": 0,
      "confidence": 0.95,
      "detectedFormat": "XML",
      "detectedType": "sunat_xml",
      "documentId": "d1",
      "missingFields": [],
      "sunatType": "FACTURA",
    },
  },
  "xml plain": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.9,
        "context": {
          "filename": "a.xml",
          "format": "XML",
          "textPreview": "<root> xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.5,
        "entityId": "d3",
        "entityType": "document",
        "expectedValue": 0.5,
        "id": "doc-cls-not_classified-1782864000000-0",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 0%, minimum 50%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "format_only",
      "completenessScore": 0,
      "confidence": 0,
      "detectedFormat": "XML",
      "detectedType": "unknown",
      "documentId": "d3",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
}
`;

exports[`classifyDocument (characterization) > pins results and anomalies for every document — no format, no mismatch 1`] = `
{
  "21 chars": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.9,
        "context": {
          "filename": undefined,
          "format": "UNKNOWN",
          "textPreview": "123456789012345678901",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.5,
        "entityId": "d17",
        "entityType": "document",
        "expectedValue": 0.5,
        "id": "doc-cls-not_classified-1782864000000-0",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 0%, minimum 50%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "no_keywords_matched",
      "completenessScore": 0,
      "confidence": 0,
      "detectedFormat": "UNKNOWN",
      "detectedType": "unknown",
      "documentId": "d17",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "bank statement": {
    "anomalies": [],
    "result": {
      "classificationMethod": "keyword_match",
      "completenessScore": 1,
      "confidence": 0.8148148148148149,
      "detectedFormat": "UNKNOWN",
      "detectedType": "bank_statement",
      "documentId": "d7",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "contract mismatch declared": {
    "anomalies": [],
    "result": {
      "classificationMethod": "keyword_match",
      "completenessScore": 1,
      "confidence": 1,
      "detectedFormat": "UNKNOWN",
      "detectedType": "contract",
      "documentId": "d9",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "declared but unknown": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.9,
        "context": {
          "filename": undefined,
          "format": "UNKNOWN",
          "textPreview": "lorem ipsum dolor sit amet consectetur adipiscing",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.5,
        "entityId": "d15",
        "entityType": "document",
        "expectedValue": 0.5,
        "id": "doc-cls-not_classified-1782864000000-0",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 0%, minimum 50%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "no_keywords_matched",
      "completenessScore": 0,
      "confidence": 0,
      "detectedFormat": "UNKNOWN",
      "detectedType": "unknown",
      "documentId": "d15",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "declared matches": {
    "anomalies": [],
    "result": {
      "classificationMethod": "keyword_match",
      "completenessScore": 1,
      "confidence": 0.8148148148148149,
      "detectedFormat": "UNKNOWN",
      "detectedType": "receipt",
      "documentId": "d10",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "empty text": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.9,
        "context": {
          "filename": undefined,
          "format": "UNKNOWN",
          "textPreview": "",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.5,
        "entityId": "d12",
        "entityType": "document",
        "expectedValue": 0.5,
        "id": "doc-cls-not_classified-1782864000000-0",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 0%, minimum 50%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "format_only",
      "completenessScore": 0,
      "confidence": 0,
      "detectedFormat": "UNKNOWN",
      "detectedType": "unknown",
      "documentId": "d12",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "identity": {
    "anomalies": [],
    "result": {
      "classificationMethod": "keyword_match",
      "completenessScore": 1,
      "confidence": 0.8627450980392156,
      "detectedFormat": "UNKNOWN",
      "detectedType": "identity",
      "documentId": "d8",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "invoice complete": {
    "anomalies": [],
    "result": {
      "classificationMethod": "keyword_match",
      "completenessScore": 1,
      "confidence": 0.7777777777777778,
      "detectedFormat": "UNKNOWN",
      "detectedType": "invoice",
      "documentId": "d4",
      "missingFields": [],
      "sunatType": "FACTURA",
    },
  },
  "invoice incomplete (1 missing)": {
    "anomalies": [],
    "result": {
      "classificationMethod": "keyword_match",
      "completenessScore": 1,
      "confidence": 0.5555555555555556,
      "detectedFormat": "UNKNOWN",
      "detectedType": "invoice",
      "documentId": "d5",
      "missingFields": [],
      "sunatType": "FACTURA",
    },
  },
  "invoice incomplete (3+ missing)": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.75,
        "context": {
          "detectedType": "invoice",
          "filename": undefined,
          "missingFields": [
            "RUC",
            "serie",
            "correlativo",
            "total",
            "igv",
          ],
        },
        "detectionMethod": "completeness_check",
        "deviation": 1,
        "entityId": "d6",
        "entityType": "document",
        "expectedValue": 1,
        "id": "doc-cls-missing_fields-1782864000000-0",
        "metric": "completeness_score",
        "reasoning": "Document classified as invoice but missing fields: RUC, serie, correlativo, total, igv",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "keyword_match",
      "completenessScore": 0,
      "confidence": 0.2777777777777778,
      "detectedFormat": "UNKNOWN",
      "detectedType": "invoice",
      "documentId": "d6",
      "missingFields": [
        "RUC",
        "serie",
        "correlativo",
        "total",
        "igv",
      ],
      "sunatType": "FACTURA",
    },
  },
  "serie only (boleta)": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.9,
        "context": {
          "filename": undefined,
          "format": "UNKNOWN",
          "textPreview": "venta general de productos varios al cliente final hoy",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.5,
        "entityId": "d14",
        "entityType": "document",
        "expectedValue": 0.5,
        "id": "doc-cls-not_classified-1782864000000-0",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 0%, minimum 50%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "no_keywords_matched",
      "completenessScore": 0,
      "confidence": 0,
      "detectedFormat": "UNKNOWN",
      "detectedType": "unknown",
      "documentId": "d14",
      "missingFields": [],
      "sunatType": "BOLETA",
    },
  },
  "threshold-length text (20 chars)": {
    "anomalies": [
      {
        "actualValue": 20,
        "confidence": 0.8,
        "context": {
          "filename": undefined,
          "textLength": 20,
        },
        "detectionMethod": "content_length_check",
        "deviation": 0,
        "entityId": "d16",
        "entityType": "document",
        "expectedValue": 20,
        "id": "doc-cls-unreadable-1782864000000-0",
        "metric": "text_length",
        "reasoning": "Document text has only 20 characters (minimum 20 for reliable classification)",
        "severity": "medium",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
      {
        "actualValue": 0.1,
        "confidence": 0.9,
        "context": {
          "filename": undefined,
          "format": "UNKNOWN",
          "textPreview": "12345678901234567890",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.4,
        "entityId": "d16",
        "entityType": "document",
        "expectedValue": 0.5,
        "id": "doc-cls-not_classified-1782864000000-1",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 10%, minimum 50%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "unreadable",
      "completenessScore": 0,
      "confidence": 0.1,
      "detectedFormat": "UNKNOWN",
      "detectedType": "unknown",
      "documentId": "d16",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "unknown long text": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.9,
        "context": {
          "filename": "x.png",
          "format": "UNKNOWN",
          "textPreview": "lorem ipsum dolor sit amet consectetur adipiscing elit",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.5,
        "entityId": "d13",
        "entityType": "document",
        "expectedValue": 0.5,
        "id": "doc-cls-not_classified-1782864000000-0",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 0%, minimum 50%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "no_keywords_matched",
      "completenessScore": 0,
      "confidence": 0,
      "detectedFormat": "UNKNOWN",
      "detectedType": "unknown",
      "documentId": "d13",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "unreadable short text": {
    "anomalies": [
      {
        "actualValue": 3,
        "confidence": 0.8,
        "context": {
          "filename": undefined,
          "textLength": 3,
        },
        "detectionMethod": "content_length_check",
        "deviation": 17,
        "entityId": "d11",
        "entityType": "document",
        "expectedValue": 20,
        "id": "doc-cls-unreadable-1782864000000-0",
        "metric": "text_length",
        "reasoning": "Document text has only 3 characters (minimum 20 for reliable classification)",
        "severity": "medium",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
      {
        "actualValue": 0.1,
        "confidence": 0.9,
        "context": {
          "filename": undefined,
          "format": "UNKNOWN",
          "textPreview": "abc",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.4,
        "entityId": "d11",
        "entityType": "document",
        "expectedValue": 0.5,
        "id": "doc-cls-not_classified-1782864000000-1",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 10%, minimum 50%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "unreadable",
      "completenessScore": 0,
      "confidence": 0.1,
      "detectedFormat": "UNKNOWN",
      "detectedType": "unknown",
      "documentId": "d11",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
  "xml + UBL without serie": {
    "anomalies": [
      {
        "actualValue": 0.2,
        "confidence": 0.75,
        "context": {
          "detectedType": "sunat_xml",
          "filename": "a.xml",
          "missingFields": [
            "emisor",
            "receptor",
            "tipo",
            "monto",
          ],
        },
        "detectionMethod": "completeness_check",
        "deviation": 0.8,
        "entityId": "d2",
        "entityType": "document",
        "expectedValue": 1,
        "id": "doc-cls-missing_fields-1782864000000-0",
        "metric": "completeness_score",
        "reasoning": "Document classified as sunat_xml but missing fields: emisor, receptor, tipo, monto",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "keyword_match",
      "completenessScore": 0.2,
      "confidence": 0.1388888888888889,
      "detectedFormat": "UNKNOWN",
      "detectedType": "sunat_xml",
      "documentId": "d2",
      "missingFields": [
        "emisor",
        "receptor",
        "tipo",
        "monto",
      ],
      "sunatType": undefined,
    },
  },
  "xml + serie": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.9,
        "context": {
          "filename": "a.xml",
          "format": "UNKNOWN",
          "textPreview": "<xml> xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.5,
        "entityId": "d1",
        "entityType": "document",
        "expectedValue": 0.5,
        "id": "doc-cls-not_classified-1782864000000-0",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 0%, minimum 50%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "no_keywords_matched",
      "completenessScore": 0,
      "confidence": 0,
      "detectedFormat": "UNKNOWN",
      "detectedType": "unknown",
      "documentId": "d1",
      "missingFields": [],
      "sunatType": "FACTURA",
    },
  },
  "xml plain": {
    "anomalies": [
      {
        "actualValue": 0,
        "confidence": 0.9,
        "context": {
          "filename": "a.xml",
          "format": "UNKNOWN",
          "textPreview": "<root> xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
        },
        "detectionMethod": "content_classification",
        "deviation": 0.5,
        "entityId": "d3",
        "entityType": "document",
        "expectedValue": 0.5,
        "id": "doc-cls-not_classified-1782864000000-0",
        "metric": "classification_confidence",
        "reasoning": "Document could not be classified (confidence 0%, minimum 50%)",
        "severity": "high",
        "timestamp": "2026-07-01T00:00:00.000Z",
      },
    ],
    "result": {
      "classificationMethod": "no_keywords_matched",
      "completenessScore": 0,
      "confidence": 0,
      "detectedFormat": "UNKNOWN",
      "detectedType": "unknown",
      "documentId": "d3",
      "missingFields": [],
      "sunatType": undefined,
    },
  },
}
`;
